# vscodium-rust

./: .gitignore  MEMORY.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  agent.ts  browser.ts  commands.ts  editor.ts  explorer.ts  extensions.ts  git.ts  index.html  main.ts  main.tsx  mobile.ts  panes.css  search.ts  settings.ts  specs.ts  status_bar.ts  store.ts  styles.css  tauri_bridge.ts  terminal.ts  theme_engine.ts  types.ts  workspace.ts
src-tauri/: .gitignore  Cargo.toml  MEMORY.md  build.rs  log.txt  tauri.conf.json  test_apiradar.rs  trace-1774705282292826.json  trace-1774707234217171.json  trace-1774708209185660.json  trace-1774710938356117.json  trace-1774711529955818.json  trace-1774711749884247.json  trace-1774712225548926.json  trace-1774713371262946.json  trace-1774713877619288.json  trace-1774715374587190.json  trace-1774715836141244.json  trace-1774715931859436.json  trace-1774717870360175.json  trace-1774718148744503.json  trace-1774719690678357.json  trace-1774721173164301.json  trace-1774724437054354.json  trace-1774725064820457.json  trace-1774753465268883.json  trace-1774753939064580.json  trace-1774756772068037.json  trace-1774762745026907.json  trace-1774763420835913.json  trace-1774764638665995.json  trace-1774764892480067.json  trace-1774764944908135.json  trace-1774765018040075.json  trace-1774765070605298.json  trace-1774765550720091.json  trace-1774766024994317.json  trace-1774767496678270.json  trace-1774767866876382.json  trace-1774769026772867.json  (+3 more)
src-tauri/benches/: ipc_bench.rs
src-tauri/capabilities/: default.json
src-tauri/ext-host/: index.js
src-tauri/src/: ai_auth.rs  ai_engine.rs  ai_tools.rs  browser.rs  browser_bridge.rs  context_key.rs  debug_adapter.rs  domain.rs  editor_service.rs  extension_host.rs  hunter.rs  keybindings.rs  lib.rs  lsp.rs  main.rs  marketplace.rs  mcp_client.rs  mcp_registry.rs  memory_store.rs  repository.rs  tool_invoker.rs  zed_test.rs
src/components/: ActivityBar.tsx  AgentSettingsView.tsx  BottomPanel.tsx  CommandPalette.tsx  DebugView.tsx  DiffViewer.tsx  Editor.tsx  EmulatorPanel.tsx  ErrorBoundary.tsx  ExtensionDetails.tsx  ExtensionTrustModal.tsx  ExtensionsView.tsx  GitGraph.tsx  McpManager.tsx  MitmPanel.tsx  RightSidebar.tsx  ScmView.tsx  SearchView.tsx  SettingsPage.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TrustDialog.tsx  Workbench.tsx  WorkflowPanel.tsx
src/components/extensions/: ExtensionDetails.tsx
src/components/terminal/: ContextMenu.tsx  TerminalFindWidget.tsx  TerminalGroupView.tsx  TerminalInstance.tsx  TerminalSidebar.tsx  TerminalView.tsx
src/services/: DiffService.ts
