[package]
name = "vscode-rust-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vscode_rust_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1.6"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.8.1"
tokio-util = { version = "0.7.10", features = ["codec"] }
lsp-types = "0.94.1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
sysinfo = "0.30"
zip = "0.6"
headless_chrome = "1.0.12"
base64 = "0.21"


